# Avito_hw30

./: README.md  manage.py  pyproject.toml
Avito_hw30/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  urls.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_category_slug_alter_ad_description_alter_ad_name_and_more.py
ads/models/: __init__.py  ad.py  category.py  selection.py
ads/permissions/: __init__.py  ad.py  selection.py
ads/serializers/: __init__.py  ad.py  selection.py
ads/validators/: __init__.py  ad.py
ads/views/: __init__.py  ad.py  category.py  location.py  selection.py
pg_data/: postmaster.pid
pg_data/base/13455/: 1247  1249  1249_fsm  1249_vm  1259  1259_fsm  1259_vm  16384  16386  16392  16394  16396  16399  16401  16403  16405  16408  16410  16415  16417  16419  16424  16426  16433  16434  16447  16452  16454  16454_fsm  16460  16461  16463  16465  16468  16470  16472  16475  16477  16482  16484  (+68 more)
pg_data/global/: pg_control  pg_internal.init
pg_data/pg_stat_tmp/: db_0.stat  db_13455.stat  global.stat
pg_data/pg_xact/: 0000
tests/: conftest.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py  selection_create_test.py
tests/factories/: __init__.py  ad.py  category.py  user.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_user_birth_date_alter_user_email.py
